--- a/frontend/frontend/src/components/custom/style.css
+++ b/frontend/frontend/src/components/custom/style.css
@@ -2,3 +2,18 @@
     font-size: 32px;
     color: #000;
 }
+
+.admin-dashboard{
+    position: fixed;
+    /* left: 0; */
+    /* top: 0; */
+}
+
+.admin-navbar{
+    position: fixed;
+    top: 0;
+    z-index: 99;
+    width: 100%;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
